[tool.poetry]
name = "py-dsa"
version = "0.1.0"
description = "Repo for learning DSA with python"
authors = ["dezeat"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.3.3"
pydantic = "^2.9.2"

[tool.pytest]
pythonpath = ["."]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
